static/css/components/book.css
.book {
    --body-text-spacing: var(--spacing-1);
    --link-color: var(--color-accent);
    --link-hover-color: var(--color-secondary);
    --code-color: var(--color-secondary);
    --code-bg-color: var(--color-canvas-dark);
    --code-block-border-color: var(--color-secondary);
    --code-block-border-size: 5px;
    --result-color: var(--color-canvas-light);
    --code-font: var(--font-berkeley-thin);
    --code-font-size: var(--font-size-base);
    --book-font: var(--font-serif);
    --book-font-size: var(--font-size-base);
    --book-text-line-height: var(--leading-wide);
    --outline-1-color: var(--color-ink-light);
    --outline-2-color: var(--color-accent);
    --outline-3-color: var(--color-secondary);
    --outline-4-color: var(--color-ink-light);
    --outline-5-color: var(--color-accent);
    --outline-6-color: var(--color-secondary);
    --outline-1-size: var(--font-size-9xl);
    --outline-2-size: var(--font-size-4xl);
    --outline-3-size: var(--font-size-3xl);
    --outline-4-size: var(--font-size-2xl);
    --outline-5-size: var(--font-size-xl);
    --outline-6-size: var(--font-size-lg);
    --chapter-number-font-size: var(--outline-1-size);

    --book-toc-font-size: var(--font-size-lg);
    --aside-width: 35ch;
    --aside-left-margin: 2ch;
    --book-right-padding: calc(var(--aside-width) + var(--aside-left-margin));
    --book-left-padding: var(--spacing-2);
    --book-margin-left: var(--tray-size);

    font-family: var(--book-font);
    font-size: var(--book-font-size);
    container-type: inline-size;
    container-name: book-container;
    overflow-x: clip;
    padding-bottom: 10ch;
    padding-right: var(--book-right-padding);
    padding-left: var(--book-left-padding);
    margin-left: var(--book-margin-left);
    @media(max-width: 1200px) {
        --book-right-padding: var(--spacing-1);
        --book-left-padding: var(--book-right-padding);
    }
    @media(max-width: 799px) {
        --book-margin-left: 0; 
        --book-right-padding: var(--spacing-1);
        --book-left-padding: var(--book-right-padding);
    }
    @media(max-width: 639px) {
        --outline-1-size: var(--font-size-6xl);
        --outline-2-size: var(--font-size-3xl);
        --outline-3-size: var(--font-size-2xl);
        --outline-4-size: var(--font-size-xl);
        --outline-5-size: var(--font-size-lg);
        --outline-6-size: var(--font-size-base);
    }

    .book-toc {
        font-family: var(--code-font);
    }
    .book-toc h1 {
        padding-block: var(--spacing-5);
    }
    .book-toc > ol {
        font-size: var(--book-toc-font-size);
    }
    .book-toc > ol li {
        text-transform: uppercase;
    }
    .book-toc > ol li > ol {
        margin-bottom: var(--spacing-1);
    }
    .book-toc ol li {
        list-style-type: number;
        list-style-position: inside;
    }

    a {
        transition: all;
        color: var(--link-color);
        transition-duration: 300ms;
        text-decoration: underline;
        &:hover {
            color: var(--link-hover-color);
        }
    }
    h1,h2,h3 {
        text-transform: uppercase;
        font-family: var(--font-heading);
    }
    h4,h5,h6 {
        font-family: var(--font-stack-slab-serif);
    }
    h1 {
        padding-bottom: var(--spacing-8);
        color: var(--outline-1-color);
        font-size: var(--outline-1-size);
        line-height: calc(var(--outline-1-size) + 2px);
    }
    h2 {
        color: var(--outline-2-color);
        font-size: var(--outline-2-size);
        line-height: calc(var(--outline-2-size) - 1px);
    }
    h3 {
        color: var(--outline-3-color);
        font-size: var(--outline-3-size);
        line-height: var(--outline-3-size);
    }
    h4 {
        color: var(--outline-4-color);
        font-size: var(--outline-4-size);
    }
    h5 {
        color: var(--outline-5-color);
        font-size: var(--outline-5-size);
    }
    h6 {
        color: var(--outline-6-color);
        font-size: var(--outline-6-size);
    }

    hgroup > span:has(+ h1),
    hgroup > span:has(+ h2),
    hgroup > span:has(+ h3),
    hgroup > span:has(+ h4),
    hgroup > span:has(+ h5),
    hgroup > span:has(+ h6) {
        padding-top: var(--spacing-1);
        color: var(--color-accent-300);
        font-size: var(--chapter-number-font-size);
        font-family: var(--font-stack-slab-serif);
        font-style: oblique;
        text-transform: lowercase;
        display: block;
    }
    h1 + span,
    h2 + span,
    h3 + span,
    h4 + span,
    h5 + span,
    h6 + span {
        color: var(--color-accent-300);
        font-size: var(--font-size-sm);
        font-family: "Rockwell";
        font-style: oblique;
        text-transform: uppercase;
        display: block;
        transform: translate(0, calc(var(--inline-space) * -1));
    }
    p {
        margin-block: var(--body-text-spacing);
        text-align: justify;
        letter-spacing: 0.05ch;
        line-height: var(--book-text-line-height);
        font-weight: 100;
    }
    b {
        font-weight: initial;
        font-style: italic;
        color: var(--color-accent);
    }
    
    section {
        max-width: 100ch;
        margin-block: calc(var(--block-space) * 2);
    }
    pre {
        padding: var(--spacing-xs);
    }
    code {
        font-family: var(--code-font);
        font-size: inherit;
        padding-inline: calc(var(--inline-space) / 2);
        letter-spacing: initial;
        color: var(--code-color);
        background-color: var(--code-bg-color);
    }

    .code-block-source-pre ~ .result {
        border-top: 1px dotted var(--result-color);
        border-left: var(--code-block-border-size) solid var(--result-color);
    }

    .code-block-source-pre ~ .error {
        --result-color: var(--color-danger);
    }

    .code-block-source-pre {
        border-left: var(--code-block-border-size) solid var(--code-block-border-color);
        font-size: var(--code-font-size);
    }
    .code-block-result {
        padding: 0;
        font-size: var(--code-font-size);
        color: var(--color-ink-light);
        font-family: var(--font-berkeley-uc-thin);
    }

    .code-block-result-label {
        display: block;
        font-size: var(--code-font-size);
        font-family: var(--font-heading);
        line-height: initial;
        color: var(--result-color);
        &::after {
            content: ": ";
        }
    }

    .code-block-result-value {
        font-family: var(--code-font);
        line-height: initial;
        position: relative;
        margin-block: 0;
        background-color: var(--code-bg-color);
    }
    h1 code,
    h2 code,
    h3 code,
    h4 code,
    h5 code,
    h6 code {
        font-family: var(--font-berkeley-uc-thin);
    }
    
    h1 > .chapter-number {
        font-size: var(--chapter-number-font-size);
        color: var(--color-canvas-soft);
        order: 2;
    }
    

    ul {
        list-style-type: square;
        margin-left: calc(var(--inline-space) * 2);
    }
    ol {
        list-style-type: number;
        margin-left: calc(var(--inline-space) * 2);
    }
    li {
        line-height: 1.5;
    }
    li::marker {
        color: var(--color-accent);
    }
    .table-container {
        overflow-x: auto;
    }
    table {
        background-color: var(--code-bg-color);
        padding-block: var(--spacing-1);
        font-family: var(--code-font);
        container-type: inline-size;
        container-name: table-container;
        @container book-container (width <= 75ch) {
            font-family: var(--font-berkeley-uc-thin);
        }
    }
    thead {
        color: var(--color-accent);
    }
    th, td {
        white-space: nowrap;
        text-align: left;
        padding-inline: var(--inline-space);
    }
    tbody {
        white-space: nowrap;
        overflow-x: auto;
    }
    .table-container::-webkit-scrollbar {
        height: auto;
    }

    .table-container::-webkit-scrollbar-thumb {
        border: 1px outset var(--color-accent);
        background-color: var(--color-accent-400);
    }

    .table-container::-webkit-scrollbar-thumb:hover {
        border: 1px outset var(--color-secondary);
        background-color: var(--color-secondary);
    }

    .table-container::-webkit-scrollbar-track {
        background-color: var(--color-canvas-darker);
    }

    table th:first-child,
    table td:first-child {
        background-color: var(--code-bg-color);
        position: sticky;
        left: 0;                    /* sticks to the left edge */
        z-index: 1;                 /* keeps it above other cells */
    }

    .book-aside {
        position: relative;
        width: 100%;
        @container book-container (width <= 75ch) {
            margin-block: var(--body-text-spacing);;
        }
    }
    .book-aside-contents {
        font-family: var(--font-berkeley-thin);
        text-align: left;
        font-size: var(--font-size-sm);
        background-color: oklch(var(--tw-lch-blue-500) / 0.3);
        width: var(--aside-width);
        padding: var(--spacing-1);
        position: absolute;
        right: calc(var(--book-right-padding) * -1);
        @container book-container (width <= 75ch) {
            --aside-width: auto;
            position: relative;
            right: auto;
        }
        & p {
            margin-block: var(--spacing-1);
        }
        & p:first-of-type,
        & p:last-of-type {
            margin-block: 0;
        }
    }
    blockquote {
        background-color: var(--color-canvas-600);
        font-family: var(--font-stack-neo-grotesque);
        padding: var(--inline-space) var(--block-space);
        p {
            margin: 0;
            padding: 0;
        }
    }
    .example {
        font-family: var(--font-code);
    }
}

